--- a/policyQuoteTask/pom.xml
+++ b/policyQuoteTask/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.jboss.processFlow.ptests</groupId>
-  <artifactId>simpleTask</artifactId>
+  <artifactId>policyQuoteTask</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
@@ -59,7 +59,7 @@
                 <propertiesSystem>
                     <!-- test uses EAP6 EJB remoting: need to provide path to ejb client property file -->
                     <jboss.ejb.client.properties.file.path>${absolute.path.ejb.client.props}</jboss.ejb.client.properties.file.path>
-                    <processId>simpleTask</processId>
+                    <processId>policyQuoteTask</processId>
                     <driverName>Alex</driverName>
                     <age>20</age>
                     <numberOfAccidents>0</numberOfAccidents>
@@ -81,7 +81,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.processFlow.ptests</groupId>
-                    <artifactId>simpleTask</artifactId>
+                    <artifactId>policyQuoteTask</artifactId>
                     <version>${version.project}</version>
                 </dependency>
             </dependencies>
