policyQuoteTask smoke test using ejb interfaces now works

--- a/base/test/src/test/resources/jboss-ejb-client.properties
+++ b/base/test/src/test/resources/jboss-ejb-client.properties
@@ -6,8 +6,10 @@ remote.connection.pfp.host= zareason
 remote.connection.pfp.port = 4697
 remote.connection.pfp.connect.options.org.xnio.Options.SASL_POLICY_NOANONYMOUS=false
 
-remote.connection.pfp.username=guest
-remote.connection.pfp.password=guest
+# NOTE:  JAASUserGroupCallbackImpl will use this userId passed as part of EJB3 authorization
+# if want more flexibility, then try one of the other UserGroupCallback implementations
+remote.connection.pfp.username=jboss
+remote.connection.pfp.password=brms
 
 
 remote.clusters=ejb
