switching to droolsjbpm version of 6.0.0.CR5  and now calling printWorkItemHandlers on kSession

--- a/policyQuoteTask/pom.xml
+++ b/policyQuoteTask/pom.xml
@@ -84,6 +84,11 @@
                     <artifactId>policyQuoteTask</artifactId>
                     <version>${version.project}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.jbpm</groupId>
+                    <artifactId>jbpm-human-task-core</artifactId>
+                    <version>${version.drools}</version>
+                </dependency>
             </dependencies>
         </plugin>
     </plugins>
