--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version.project>1.0-SNAPSHOT</version.project>
     <version.acme.insurance>1.0-SNAPSHOT</version.acme.insurance>
     <version.processFlow>1.0-SNAPSHOT</version.processFlow>
-    <version.drools>6.1.0-SNAPSHOT</version.drools>
+    <version.drools>6.0.0.CR5</version.drools>
     <version.resteasy>2.3.6.Final</version.resteasy>
     <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-4</version.org.jboss.spec.jboss.javaee.6.0>
     <version.org.jboss.as>7.2.1.Final-redhat-10</version.org.jboss.as>
