--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,8 @@ remote.connection.pfp.port = ${pfp.core.remoting.port}
 remote.connection.hornetq.port = ${calculated.hornetq.remoting.port}
 org.jboss.processFlow.pfp.core.host.name=${pfp.core.host.name}
 
+path.to.log4j.config=${development.base}/conf/test/log4j.xml
+
 org.jboss.processFlow.clientCount=1
 org.jboss.processFlow.requestsPerClient=1
 org.jboss.processFlow.sleepTimeMillis=1000
