--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,8 @@
     <deploymentId>git-playground</deploymentId>
     <absolute.path.ejb.client.props>/u01/projects/bpm-performanceTests/base/test/src/test/resources/jboss-ejb-client.properties</absolute.path.ejb.client.props>
     <version.project>1.0-SNAPSHOT</version.project>
-    <version.acme.insurance>1.0-SNAPSHOT</version.acme.insurance>
     <version.processFlow>1.0-SNAPSHOT</version.processFlow>
-    <version.drools>6.0.0.CR5</version.drools>
+    <version.drools>6.0.0.Final</version.drools>
     <version.resteasy>2.3.6.Final</version.resteasy>
     <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-4</version.org.jboss.spec.jboss.javaee.6.0>
     <version.org.jboss.as>7.2.1.Final-redhat-10</version.org.jboss.as>
@@ -25,43 +24,8 @@
       <module>policyQuoteTask</module>
   </modules>
 
-  <repositories>
-    <repository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Repository Group</name>
-
-      <!-- JA Bride: 
-        different than what typically is seen from stock EAP quickstarts
-        <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-      -->
-      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-
-      <layout>default</layout>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </repository>
-  </repositories>
-
-
   <dependencyManagement>
     <dependencies>
-
-      <dependency>
-        <groupId>org.jboss.processFlow.services</groupId>
-        <artifactId>interfaces</artifactId>
-        <version>${version.processFlow}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.acme.insurance</groupId>
-        <artifactId>insurancepolicy-model</artifactId>
-        <version>${version.acme.insurance}</version>
-      </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -69,17 +33,24 @@
         <version>${version.slf4j}</version>
       </dependency>
       <dependency>
-        <groupId>org.jboss.spec</groupId>
-        <artifactId>jboss-javaee-6.0</artifactId>
-        <version>${version.org.jboss.spec.jboss.javaee.6.0}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-api</artifactId>
         <version>${version.drools}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kie.remote</groupId>
+          <artifactId>kie-services-client</artifactId>
+          <version>${version.drools}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kie</groupId>
+          <artifactId>kie-internal</artifactId>
+          <version>${version.drools}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.drools</groupId>
+          <artifactId>drools-core</artifactId>
+          <version>${version.drools}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.jmeter</groupId>
@@ -87,52 +58,6 @@
         <version>${version.jmeter}</version>
       </dependency>
 
-      <!--dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>1.4</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-core-asl</artifactId>
-        <version>${version.org.codehaus.jackson}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>${version.org.codehaus.jackson}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-jaxrs</artifactId>
-        <version>${version.org.codehaus.jackson}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-xc</artifactId>
-        <version>${version.org.codehaus.jackson}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.jbpm</groupId>
-        <artifactId>jbpm-workitems</artifactId>
-        <version>${version.drools}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.kie.remote</groupId>
-        <artifactId>kie-services-remote</artifactId>
-        <version>${version.drools}</version>
-      </dependency -->
     </dependencies>
   </dependencyManagement>
 </project>
