added tests for reusable and embedded subprocesses

--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ org.jboss.processFlow.suspend.client.debugger=n
 # if prefer KSessionService of PFP to use a KnowledgeBase that does not query guvnor through a KnowledgeAgent,
 # then set the following to false
 # afterwards, set org.jboss.processFlow.absolutePathToBpmn to reference the path to the bpmn2 to test with
-org.jboss.processFlow.useKnowledgeAgent=false
+org.jboss.processFlow.useKnowledgeAgent=true
 
 org.jboss.processFlow.claimTask=true
 org.jboss.processFlow.completeTask=true
