--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.processFlow.ptests</groupId>
+  <groupId>org.jboss.processFlow.ptests.fsw</groupId>
   <artifactId>parent</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -10,8 +10,6 @@
     <deploymentId>git-playground</deploymentId>
     <absolute.path.ejb.client.props>/u01/projects/bpm-performanceTests/base/test/src/test/resources/jboss-ejb-client.properties</absolute.path.ejb.client.props>
     <version.project>1.0-SNAPSHOT</version.project>
-    <version.processFlow>1.0-SNAPSHOT</version.processFlow>
-    <version.drools>6.0.0.Final</version.drools>
     <version.resteasy>2.3.6.Final</version.resteasy>
     <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-4</version.org.jboss.spec.jboss.javaee.6.0>
     <version.org.jboss.as>7.2.1.Final-redhat-10</version.org.jboss.as>
@@ -31,26 +29,6 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${version.slf4j}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.kie</groupId>
-        <artifactId>kie-api</artifactId>
-        <version>${version.drools}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.kie.remote</groupId>
-          <artifactId>kie-services-client</artifactId>
-          <version>${version.drools}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.kie</groupId>
-          <artifactId>kie-internal</artifactId>
-          <version>${version.drools}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.drools</groupId>
-          <artifactId>drools-core</artifactId>
-          <version>${version.drools}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.jmeter</groupId>
